[tool.poetry]
name = "latimes"
version = "0.3.0"
description = "Convierte tiempos"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
latimes = 'latimes.__main__:main'
latime = 'latimes.__main__:main'

[tool.poetry.dependencies]
PyYAML = "^5.4.1"
Unidecode = "^1.2.0"
click = "^7.1.2"
pyperclip = "^1.8.2"
python = "^3.6"
python-dateutil = "^2.8.1"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
freezegun = "^1.1.0"
isort = "^5.7.0"
pytest = "^6.2.2"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
