[tool.poetry]
name = "latimes"
version = "0.3.2"
description = "Convierte tiempos"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
latimes = 'latimes.__main__:main'
latime = 'latimes.__main__:main'

[tool.poetry.dependencies]
PyYAML = {version= "^5.4.1", optional=true}
Unidecode = "^1.2.0"
click = {version="^7.1.2", optional=true}
pyperclip = {version="^1.8.2", optional=true}
python = "^3.6"
python-dateutil = "^2.8.1"
pytz = "^2021.1"

[tool.poetry.extras]
cli = ["click", "PyYAML", "pyperclip"]


[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
freezegun = "^1.1.0"
isort = "^5.7.0"
pytest = "^6.2.2"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
